--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -22,72 +22,77 @@
         android:indeterminateTint="@color/colorYellow"/>
 
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginLeft="@dimen/text_margin"
         android:layout_marginRight="@dimen/text_margin"
         android:layout_marginTop="64dp"
-        android:orientation="vertical"
-        android:padding="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <EditText
-            android:id="@+id/username"
+        android:id="@+id/scroll">
+        <LinearLayout
+            android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:autofillHints="@string/username"
-            android:background="@drawable/text_view_login"
-            android:hint="@string/username"
-            android:inputType="textPersonName"
-            android:padding="10dp"
-            android:textColorHint="@color/colorWhite"
-            android:textColor="@color/colorPrimaryDark"/>
+            android:orientation="vertical"
+            android:padding="10dp">
 
-        <EditText
-            android:id="@+id/email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:autofillHints="@string/prompt_email"
-            android:background="@drawable/text_view_login"
-            android:hint="@string/prompt_email"
-            android:inputType="textEmailAddress"
-            android:padding="10dp"
-            android:textColorHint="@color/colorWhite"
-            android:textColor="@color/colorPrimaryDark"/>
+            <EditText
+                android:id="@+id/username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:autofillHints="@string/username"
+                android:background="@drawable/text_view_login"
+                android:hint="@string/username"
+                android:inputType="textPersonName"
+                android:padding="10dp"
+                android:textColorHint="@color/colorWhite"
+                android:textColor="@color/colorPrimaryDark"/>
 
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:autofillHints="@string/prompt_password"
-            android:background="@drawable/text_view_login"
-            android:hint="@string/prompt_password"
-            android:inputType="textPassword"
-            android:padding="10dp"
-            android:textColorHint="@color/colorWhite"
-            android:textColor="@color/colorPrimaryDark"/>
+            <EditText
+                android:id="@+id/email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:autofillHints="@string/prompt_email"
+                android:background="@drawable/text_view_login"
+                android:hint="@string/prompt_email"
+                android:inputType="textEmailAddress"
+                android:padding="10dp"
+                android:textColorHint="@color/colorWhite"
+                android:textColor="@color/colorPrimaryDark"/>
 
-        <EditText
-            android:id="@+id/confirmPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:autofillHints="@string/confirm_password"
-            android:background="@drawable/text_view_login"
-            android:hint="@string/confirm_password"
-            android:inputType="textPassword"
-            android:padding="10dp"
-            android:textColorHint="@color/colorWhite"
-            android:textColor="@color/colorPrimaryDark"/>
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:autofillHints="@string/prompt_password"
+                android:background="@drawable/text_view_login"
+                android:hint="@string/prompt_password"
+                android:inputType="textPassword"
+                android:padding="10dp"
+                android:textColorHint="@color/colorWhite"
+                android:textColor="@color/colorPrimaryDark"/>
 
-    </LinearLayout>
+            <EditText
+                android:id="@+id/confirmPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:autofillHints="@string/confirm_password"
+                android:background="@drawable/text_view_login"
+                android:hint="@string/confirm_password"
+                android:inputType="textPassword"
+                android:padding="10dp"
+                android:textColorHint="@color/colorWhite"
+                android:textColor="@color/colorPrimaryDark"/>
+
+        </LinearLayout>
+    </ScrollView>
 
     <Button
         android:id="@+id/signupBtn"
@@ -101,7 +106,7 @@
         android:text="@string/sign_up_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+        app:layout_constraintTop_toBottomOf="@+id/scroll" />
 
     <View
         android:id="@+id/divider"
@@ -143,7 +148,7 @@
         android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="48dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -191,7 +196,7 @@
         android:id="@+id/alreadyAMember"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="96dp"
+        android:layout_marginBottom="24dp"
         android:text="@string/already_a_member"
         android:textColor="@color/colorYellow"
         android:textSize="@dimen/text_margin"
