--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#304FFE</color>
+    <color name="colorPrimary">#003153</color>
     <!--
     <color name="colorPrimary">#063CDF</color>
     -->
-    <color name="colorPrimaryDark">#11042E</color>
-    <color name="colorAccent">#85CAF3</color>
+    <color name="colorPrimaryDark">#001428</color>
+    <color name="colorAccent">#85F3F3</color>
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorBlue">#03A9F4</color>
-    <color name="homepageLightBackground">#F6FF97</color>
-    <color name="homepageDarkBackground">#1A1A18</color>
     <color name="colorRed">#FF0000</color>
     <color name="colorYellow">#FFFF00</color>
     <color name="colorLiteGrey">#CCCCCC</color>
