--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,9 +2,15 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+        <item name="actionBarStyle">@style/ActionBarStyle</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:textColorPrimary">@color/colorPrimaryDark</item>
+        <item name="android:textColorHint">@color/colorGrey</item>
+        <item name="android:textColorSecondary">@color/colorBlack</item>
+        <item name="drawableTint">@color/colorPrimary</item>
     </style>
     <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
@@ -20,10 +26,24 @@
         <item name="android:colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="LoadingProgressBar" parent="Widget.AppCompat.ProgressBar">
-        <item name="iconSize">36dp</item>
-        <item name="android:scaleY">8</item>
-        <item name="android:scaleX">8</item>
+    <style name="ActionBarStyle" parent="Widget.AppCompat.ActionBar">
+        <item name="android:background">@color/colorPrimaryDark</item>
+        <item name="android:elevation">0dp</item>
+    </style>
+    <style name="TextStyle" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+    </style>
+
+    <style name="AppTheme.Green" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="actionBarStyle">@style/ActionBarStyle.Green</item>
+        <item name="colorPrimary">#00C896</item>
+        <item name="colorPrimaryDark">#112E2E</item>
+        <item name="colorAccent">#85F3CC</item>
+    </style>
+    <style name="ActionBarStyle.Green" parent="Widget.AppCompat.ActionBar">
+        <item name="android:background">#112E2E</item>
+        <item name="android:elevation">0dp</item>
     </style>
 
 </resources>
