--- a/app/src/main/res/layout/teachers_viewof_course_resources.xml
+++ b/app/src/main/res/layout/teachers_viewof_course_resources.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/background_light">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -18,7 +17,6 @@
             android:id="@+id/btnUploadDocument"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/colorWhite"
             android:elevation="30dp"
             android:layout_margin="@dimen/activity_horizontal_margin"
             android:src="@drawable/icon_doc"
@@ -28,7 +26,6 @@
             android:id="@+id/btnUploadImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/colorWhite"
             android:elevation="30dp"
             android:layout_margin="@dimen/activity_horizontal_margin"
             android:tint="@color/colorBlack"
@@ -38,7 +35,6 @@
             android:id="@+id/btnUploadVideo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/colorWhite"
             android:elevation="20dp"
             android:layout_margin="@dimen/activity_horizontal_margin"
             android:tint="@color/colorBlack"
