--- a/app/src/main/res/drawable/btn_multi_select.xml
+++ b/app/src/main/res/drawable/btn_multi_select.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="@color/colorYellow"
+        android:color="@color/colorPrimary"
         />
     <corners
         android:topLeftRadius="20dp"
