--- a/app/src/main/res/layout/activity_active_course_home.xml
+++ b/app/src/main/res/layout/activity_active_course_home.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/background_light">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -92,6 +91,7 @@
                     android:textSize="@dimen/text_margin"
                     android:typeface="normal"
                     android:gravity="center_vertical"
+                    android:layout_gravity="center"
                     android:layout_weight="40"/>
             </LinearLayout>
 
