--- a/app/src/main/res/layout/activity_active_course_main.xml
+++ b/app/src/main/res/layout/activity_active_course_main.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@drawable/background_light"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/colorWhite"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:theme="@style/AppTheme">
     <ProgressBar
         android:id="@+id/loadingActiveCourse"
         android:layout_width="wrap_content"
