--- a/app/src/main/res/layout/activity_active_course_notifications.xml
+++ b/app/src/main/res/layout/activity_active_course_notifications.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/background_light">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!-- Following Text View and Recycler Views should bn displayed upon click on Notifications button -->
     <TextView
@@ -33,5 +32,4 @@
         android:padding="10dp"
         android:background="@drawable/text_view_login"/>
     <!-- End DisplayOnClickingResourcesButton -->
-
 </RelativeLayout>
