--- a/app/src/main/res/layout/activity_active_course_resources.xml
+++ b/app/src/main/res/layout/activity_active_course_resources.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/background_light">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <!-- Following Text View and Recycler Views should bn displayed upon click on Resources button -->
     <TextView
         android:id="@+id/textCourseResources"
