--- a/app/src/main/res/layout/activity_active_course_review.xml
+++ b/app/src/main/res/layout/activity_active_course_review.xml
@@ -2,8 +2,7 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/background_light">
+    android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -32,7 +31,7 @@
             android:rating="3"
             android:stepSize="0.5"
             android:progressTint="@color/colorYellow"
-            android:progressBackgroundTint="@color/colorPrimaryDark"
+            android:progressBackgroundTint="@color/colorGrey"
             android:layout_gravity="center_vertical"/>
         <EditText
             android:layout_width="match_parent"
@@ -56,7 +55,7 @@
             android:layout_marginVertical="20dp"
             android:paddingVertical="10dp"
             android:paddingHorizontal="20dp"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/colorWhite"
             android:text="@string/submit_review"
             android:typeface="sans"
             android:textSize="@dimen/text_margin"
