--- a/app/src/main/res/layout/activity_add_course_contd.xml
+++ b/app/src/main/res/layout/activity_add_course_contd.xml
@@ -3,8 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/background_light"
     android:theme="@style/AppTheme">
 
     <ProgressBar
@@ -74,23 +72,22 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:id="@+id/add_documents_introductory"
             android:layout_weight="30"
             android:gravity="center"
             android:layout_margin="@dimen/activity_horizontal_margin">
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/colorWhite"
                 android:elevation="30dp"
                 android:layout_margin="@dimen/activity_horizontal_margin"
                 android:src="@drawable/icon_doc"
                 android:tint="@color/colorBlack"
-                tools:ignore="ContentDescription"/>
+                tools:ignore="ContentDescription"
+                android:id="@+id/add_documents_introductory"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Add Document"
+                android:text="@string/add_document"
                 android:gravity="center"
                 android:textColor="@color/colorBlack"
                 android:textSize="@dimen/text_margin"/>
@@ -99,23 +96,22 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:id="@+id/add_images_introductory"
             android:layout_weight="30"
             android:gravity="center"
             android:layout_margin="@dimen/activity_horizontal_margin">
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/colorWhite"
                 android:elevation="30dp"
                 android:layout_margin="@dimen/activity_horizontal_margin"
                 android:tint="@color/colorBlack"
                 android:src="@drawable/icon_image"
-                tools:ignore="ContentDescription" />
+                tools:ignore="ContentDescription"
+                android:id="@+id/add_images_introductory"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Add Image"
+                android:text="@string/add_image"
                 android:gravity="center"
                 android:textColor="@color/colorBlack"
                 android:textSize="@dimen/text_margin"/>
@@ -125,23 +121,22 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:id="@+id/add_video_introductory"
             android:layout_weight="30"
             android:gravity="center"
             android:layout_margin="@dimen/activity_horizontal_margin">
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/colorWhite"
                 android:elevation="20dp"
                 android:layout_margin="@dimen/activity_horizontal_margin"
                 android:tint="@color/colorBlack"
                 android:src="@drawable/icon_video"
-                tools:ignore="ContentDescription" />
+                tools:ignore="ContentDescription"
+                android:id="@+id/add_video_introductory" />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Add Video"
+                android:text="@string/add_video"
                 android:gravity="center"
                 android:textColor="@color/colorBlack"
                 android:textSize="@dimen/text_margin"/>
@@ -167,10 +162,11 @@
         android:layout_alignParentBottom="true"
         android:layout_margin="24dp"
         android:background="@drawable/btn_blue"
-        android:textColor="@color/colorBlack"
+        android:textColor="@color/colorWhite"
         android:textSize="@dimen/text_margin"
-        android:text="Upload and Proceed"
+        android:text="@string/upload_and_proceed"
         android:drawableStart="@drawable/icon_upload"
+        android:drawableTint="@color/colorWhite"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:paddingBottom="10dp"
@@ -183,9 +179,10 @@
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:layout_alignParentBottom="true"
         android:progress="100"
-        android:progressTint="@color/colorYellow"
-        android:progressBackgroundTint="@color/colorWhite"/>
+        android:progressTint="@color/colorPrimary"
+        android:progressBackgroundTint="@color/colorGrey"
+        android:scaleY="3"/>
 </RelativeLayout>
