--- a/app/src/main/res/layout/activity_courses_taught.xml
+++ b/app/src/main/res/layout/activity_courses_taught.xml
@@ -2,8 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/background_light">
+    android:layout_height="match_parent">
     <!--
     <TextView
         android:layout_width="match_parent"
@@ -32,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/loadingCoursesTaught"
         android:textSize="20sp"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         android:typeface="sans"
         android:padding="3dp"
@@ -63,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         android:typeface="sans"
         android:padding="3dp"
@@ -99,11 +98,12 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
-        android:background="@drawable/btn_rounded_rect"
+        android:background="@drawable/btn_blue"
         android:drawableStart="@drawable/add_icon"
+        android:drawableTint="@color/colorWhite"
         android:padding="10dp"
         android:text="@string/add_new_course"
-        android:textColor="@color/colorBlack" />
+        android:textColor="@color/colorWhite" />
 
 
 
