--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,6 +107,7 @@
                     android:clickable="true"
                     android:focusable="true"
                     android:drawableEnd="@drawable/next"
+                    android:drawableTint="@color/colorPrimary"
                     android:drawablePadding="@dimen/activity_horizontal_margin"/>
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/exploreCourseListView"
