--- a/app/src/main/res/layout/activity_setup_1.xml
+++ b/app/src/main/res/layout/activity_setup_1.xml
@@ -26,6 +26,7 @@
         android:gravity="start"
         android:textSize="@dimen/text_margin"
         android:layout_marginStart="@dimen/activity_vertical_margin"
+        android:layout_below="@id/loadingSetUp1"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginTop="10dp"
         android:id="@+id/textSetupTitle2"
