--- a/app/src/main/res/layout/course_introductory_content_card.xml
+++ b/app/src/main/res/layout/course_introductory_content_card.xml
@@ -13,7 +13,7 @@
 
         android:id="@+id/courseIntroductoryCard"
         android:layout_width="match_parent"
-        app:cardBackgroundColor="@color/colorPrimary"
+        app:cardBackgroundColor="@color/colorLiteGrey"
         android:layout_height="160dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="12dp">
