--- a/app/src/main/res/layout/explore_course_recycler_card.xml
+++ b/app/src/main/res/layout/explore_course_recycler_card.xml
@@ -23,7 +23,7 @@
             android:text="@string/course_name"
             android:textSize="@dimen/text_margin"
             android:textStyle="bold"
-            android:typeface="serif"
+            android:typeface="sans"
             android:gravity="center_vertical"/>
         <TextView
             android:id="@+id/courseInstructor"
@@ -62,6 +62,7 @@
             android:typeface="serif"
             android:gravity="center_vertical"
             android:drawableEnd="@drawable/icon_star_dark"
+            android:drawableTint="@color/colorPrimary"
             android:drawablePadding="10dp"/>
     </LinearLayout>
     <androidx.cardview.widget.CardView
