--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -3,14 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:background="@color/colorAccent"
+    android:background="@color/colorPrimary"
     android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/lightlogo2"
+        android:src="@drawable/default_person_image"
         android:layout_centerInParent="true" />
-
-
 </RelativeLayout>
