--- a/app/src/main/res/layout/teachers_viewof_course_forum.xml
+++ b/app/src/main/res/layout/teachers_viewof_course_forum.xml
@@ -2,9 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/background_light">
+    android:layout_height="match_parent">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/refreshForumTeacher"
@@ -13,8 +11,6 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        android:background="@color/colorWhite"
-        android:backgroundTint="@color/colorWhite"
         android:tint="@color/colorBlack"
         android:src="@drawable/icon_refresh"
         android:elevation="30dp"
@@ -34,7 +30,8 @@
         android:background="@drawable/forum_chat_bar_layout"
         android:weightSum="100"
         android:layout_marginHorizontal="5dp"
-        android:layout_marginVertical="10dp">
+        android:layout_marginVertical="5dp"
+        android:padding="5dp">
 
         <ImageButton
             android:layout_width="match_parent"
