--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,6 @@
         <item name="android:textColorPrimary">@color/colorPrimaryDark</item>
         <item name="android:textColorHint">@color/colorGrey</item>
         <item name="android:textColorSecondary">@color/colorBlack</item>
-        <item name="drawableTint">@color/colorPrimary</item>
     </style>
     <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
@@ -26,9 +25,10 @@
         <item name="android:colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="ActionBarStyle" parent="Widget.AppCompat.ActionBar">
+    <style name="ActionBarStyle" parent="Widget.AppCompat.ActionBar.Solid">
         <item name="android:background">@color/colorPrimaryDark</item>
         <item name="android:elevation">0dp</item>
+        <item name="drawableTint">@color/colorWhite</item>
     </style>
     <style name="TextStyle" parent="TextAppearance.AppCompat">
         <item name="android:textColor">@color/colorPrimaryDark</item>
